# rust_projects

beverages/: Cargo.toml
bills_pay/: Cargo.toml
cards_rand/: Cargo.toml
closure_example/: .gitignore
first_rust/: add  add.rs  (+6 more)
rocket_app/: .gitignore  Cargo.toml  Rocket.toml
rocket_app/migrations/2026-01-04-183213-0000_create_user_table/: up.sql
rocket_app/migrations/2026-01-04-234623-0000_create_user_table/: up.sql
rocket_app/src/: main.rs  repositories.rs  routes.rs  schema.rs
rocket_app/src/auth/: basic_auth.rs
rocket_app/src/db/: db_conn.rs
rocket_app/src/exchanges/: requests.rs
rocket_app/src/exchanges/requests/: update_user_request.rs  user_request.rs
rocket_app/src/models/: user.rs
rocket_app/src/repositories/: base_create_repository.rs  base_repository.rs  user_repository.rs
rocket_app/src/routes/: errors.rs
rocket_app/src/routes/errors/: errors_handlers.rs
rocket_app/src/routes/users/: users_routes.rs
rust-in-action/actionkv/: Cargo.toml
rust-in-action/actionkv/src/: action_kv.rs  akv_mem.rs  key_value_pair.rs  lib.rs
rust-in-action/grep-lite/: Cargo.toml
rust-in-action/grep-lite/src/: data_types.rs  file.rs  lib.rs  main.rs  q.rs  read.rs  sat.rs
user_management/: Cargo.toml  Dockerfile  compose.yml
user_management/migrations/: 0001_users_table.sql
user_management/src/: main.rs  models.rs
user_management/src/handlers/: root_handler.rs  user_handler.rs
user_management/src/models/domain/: user.rs
user_management/src/models/exchanges/: requests.rs
user_management/src/models/exchanges/requests/: user_payload.rs
(+204 files in other folders)
