[package]
name = "rocket_app"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
diesel = {  version = "2.1.0", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.15.0"
rocket = {version = "0.5.1", features = ["json"]}
rocket_sync_db_pools = {  version = "0.1.0", features = ["diesel_sqlite_pool"] }
serde_json = "1.0.148"
