[package]
name = "actionkv"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1"
byteorder = "1.5.0"
# crc = "3.4.0"
crc = "1"
# crc32 = "0.0.2"
serde = { version = "1.0", features = ["derive"] }


[lib]
name = "actionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/bin/akv_mem.rs"

[[bin]]
name = "akv_disk"
path = "src/bin/akv_disk.rs"
