[package]
name = "grep-lite"
version = "0.1.0"
edition = "2024"
authors = ["Adewale Ijalana <adewaleijalana@gmail.com>"]

[dependencies]
clap = { version = "4.6.1", features = ["cargo"] }
rand = "0.10.1"
regex = "1.12.4"

[lib]
name = "grep_lite"
path = "src/lib.rs"

[[bin]]
name = "grep-lite"
path = "src/main.rs"
